# sqlalchemy-mastery

./: .gitignore  README.md  compose.yaml  pyproject.toml
.claude/: launch.json
.devcontainer/: devcontainer.json  docker-compose.extend.yml
.github/workflows/: ci.yml  pages-deploy.yml
book/: index.html  llms.txt  robots.txt  sitemap.xml
book/assets/: book.js  style.css
book/chapters/: ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  ch07.html  ch08.html  ch09.html  ch10.html  ch11.html  ch12.html
challenges/: conftest.py
challenges/ch01/: challenge.py  test_ch01.py
challenges/ch02/: challenge.py  test_ch02.py
challenges/ch03/: challenge.py  test_ch03.py
challenges/ch04/: challenge.py  test_ch04.py
challenges/ch05/: challenge.py  test_ch05.py
challenges/ch06/: challenge.py  test_ch06.py
challenges/ch07/: challenge.py  test_ch07.py
challenges/ch08/: challenge.py  test_ch08.py
challenges/ch09/: challenge.py  test_ch09.py
challenges/ch10/: challenge.py  test_ch10.py
challenges/ch11/: challenge.py  test_ch11.py
challenges/ch12/: challenge.py  test_ch12.py
examples/ch01/: 01_hello_sqlalchemy.py
examples/ch02/: 01_connect_vs_begin.py  02_pool_anatomy.py  03_production_engine.py
examples/ch03/: 01_tables_and_ddl.py  02_core_crud.py  03_joins_aggregates.py
examples/ch04/: 01_first_model.py  02_types_and_constraints.py  03_naming_conventions.py
examples/ch05/: 01_unit_of_work.py  (+2 more)
notes/: research.md
solutions/: ch01.py  ch02.py  ch03.py  ch04.py  ch05.py  ch06.py  ch07.py  ch08.py  ch09.py  ch10.py  ch11.py  ch12.py
(+20 files in other folders)
