[project]
name = "sqlalchemy-course"
version = "0.1.0"
description = "SQLAlchemy Mastery — a hands-on course on modern SQLAlchemy"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.51,<2.1",
    "psycopg[binary]>=3.2",
    "asyncpg>=0.30",
    "alembic>=1.16",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=1.0",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["challenges"]

[tool.uv]
package = false
